mengubah dan menambahkan tombol baru

--- a/certificates/certificates.html
+++ b/certificates/certificates.html
@@ -13,11 +13,11 @@
 
    <div id="app">
 
-      <div class="profil-certi certificates">
+      <div class="profil-nama card-nama">
          <div class="profil">
             <img src="../assets/img/phs.png" alt="">
-            <div class="ss">
-               <h1 class="s">{{ namaDepan }} <span class="kuning">{{namaBelakang}}</span></h1>
+            <div class="tengah">
+               <h1 class="tengah2">{{ namaDepan }} <span class="kuning">{{namaBelakang}}</span></h1>
                <h4>Fullstack Developer || UI / UX Designer</h4>
             </div>
          </div>
