--- a/index.html
+++ b/index.html
@@ -29,13 +29,19 @@
          </div>
       </a>
 
+      <div class="contact">
+         <a href="https://wa.me/message/ET2T7QJZAHLWH1" class="wa"><img src="assets/img/WhatsApp.png" alt=""></a>
+         <a href="https://www.instagram.com/_fauzanxd/" class="ig"><img src="assets/img/Instagram.png" alt=""></a>
+         <a href="https://github.com/Fauzanyan" class="github"><img src="assets/img/GitHub.png" alt=""></a>
+      </div>
 
 
 
 
-      <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-      <script src="assets/js/app.js"></script>
    </div>
+   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+   <script src="assets/js/app.js"></script>
+
 
 
 </body>
