--- a/about/about.html
+++ b/about/about.html
@@ -27,18 +27,24 @@
          <div class="isi-about">
             <div class="about">
                <h1>ABOUT</h1>
-               <p>Hi, Nama saya Muhammad Fauzan, Saya adalah seorang web developer dan seorang designer yang tinggal di
-                  Bandung, Indonesia. Kedepannya saya berharap agar mampu menguasai semua bahasa pemrograman, untuk
-                  sekarang saya lebih fokus di bagian Front-End dan Back-End. untuk yang tidak tau apa itu Front-End dan
-                  Back-End kalian bisa langsung klik disini, yang nantinya akan diarahkan langsung ke blog saya sendiri,
-                  karena saya pernah menuliskan mengenai penjelasan dari Front-End, Back-End dan apa saja yang harus
-                  dikuasai, yang sudah saya rangkum sendiri dari website-website terpercaya.
+               <p>Hi, Nama saya Muhammad Fauzan, Saya adalah seorang pelajar yang lahir di tahun 2005. Saya mulai
+                  berkecimpung di dunia IT pada tahun 2019. Harapan saya di tahun kedepannya adalah agar mampu memahami
+                  semua bahasa pemrograman yang ada.
                </p>
 
-               <p>Disekolah saya ikut berbagai macam kegiatan mulai dari OSIS (ORGANISASI SISWA INTRA SEKOLAH),
-                  TIM
-                  MEDSOS,
-                  dan juga TEAM CREATIVE</p>
+               <p>Di SMK saya ikut berbagai macam kegiatan, mulai dari OSIS (Organisasi Siswa Intra Sekolah), Tim
+                  Medsos, dan juga Team Creative, namun saya memutuskan untuk keluar di saat kelas 11 dikarenakan
+                  berbagai hal.</p>
+               <p>Terkadang saat dirumah saya membuat artikel di blog saya yaitu <a
+                     href="https://rakuzancoding.blogspot.com/" class="link-a">rakuzancoding</a> , serta
+                  mengikuti webinar gratis, dan certificatenya bisa kalian chek di <a
+                     href="../certificates/certificates.html" class="link-a">certificate</a>
+               </p>
+               <p>Diluar rumah saya mengikuti kegiatan eskul silat, dan hanya mengikuti dua kali pertandingan saja saat
+                  kelas 11, certificate nya bisa kalian lihat di <a href="../certificates/certificates.html"
+                     class="link-a">certificate</a>, namun saya memutuskan
+                  untuk istirahat
+                  dikarenakan adanya pkl dan test</p>
             </div>
             <br>
             <hr><br>
