--- a/about/about.html
+++ b/about/about.html
@@ -51,9 +51,20 @@
             <div class="skill">
                <h2>Skillset ( Web Development )</h2>
                <div class="skills" v-for="item in skill">
-                  <h2>{{ item.namaSkill}}</h2>
-                  <p class="isi-skill">{{item.isiSkill}}</p>
-
+                  <h2>HTML and CSS</h2>
+                  <p class="isi-skill">Bootstrap (3+), Sass, Talwind.css</p>
+                  <h2>JavaScript</h2>
+                  <p class="isi-skill">JavaScript (ES2015+), TypeScript, Node.js</p>
+                  <h2>Build tools</h2>
+                  <p class="isi-skill">Grunt, Gulp, Webpack</p>
+                  <h2>JavaScript frameworks</h2>
+                  <p class="isi-skill">Angular (2+), jQuery, React.js, Vue.js</p>
+                  <h2>Server-side</h2>
+                  <p class="isi-skill">PHP</p>
+                  <h2>Server-side frameworks</h2>
+                  <p class="isi-skill">Express, Laravel, Phoenix</p>
+                  <h2>Others</h2>
+                  <p class="isi-skill">Git, Linux, SQL</p>
                </div>
                <br>
                <hr><br>
