--- a/certificates/certificates.html
+++ b/certificates/certificates.html
@@ -28,7 +28,7 @@
          <h1>CERFICATE</h1>
          <div class="kumpulan-certi">
             <div v-for="item in certificates">
-               <div class="certi">
+               <div class="certi ">
                   <img :src="item.src" alt="">
                </div>
             </div>
@@ -36,11 +36,18 @@
 
       </div>
 
+
+
+      <!-- <div class="show-full">
+
+      </div> -->
+
       <a href="../index.html" class="keluar">
          <strong>KEMBALI</strong>
       </a>
 
    </div>
+
 
 
 
