--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
       </div>
 
 
-
-      <a :href="item.href" :class="item.class" class="content" v-for="item in links">
+      <a :href="item.href" :class="item.class" class="content" v-for="item in link">
+         <div class="text">
+            <h2>{{ item.nama }}</h2>
+         </div>
+      </a>
+      <a :class="item.class" class="content" v-for="item in links">
          <div class="text">
             <h2>{{ item.nama }}</h2>
          </div>
