--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </a>
       <a :class="item.class" class="content" v-for="item in links">
          <div class="text">
-            <h2>{{ item.nama }} Ganteng</h2>
+            <h2>{{ item.nama }}</h2>
          </div>
       </a>
 
