--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <div class="profile hide">
          <div class="image">
-            <img src="assets/img/phs.png" alt="phs">
+            <img src="assets/img/zan.png" alt="phs">
          </div>
          <div class="nama nama-certi">
             <h1>{{ namaDepan }} <span class="kuning">{{namaBelakang}}</span></h1>
